# ChangeLog for media-sound/cantata
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/ChangeLog,v 1.33 2015/06/04 19:04:14 kensington Exp $

  04 Jun 2015; Michael Palimaka <kensington@gentoo.org> cantata-1.5.1.ebuild:
  Move various kde-base packages to kde-apps.

  02 Apr 2015; Michael Palimaka <kensington@gentoo.org> cantata-1.5.1.ebuild:
  Update dependencies for Qt 5 build.

  22 Mar 2015; Manuel Rüger <mrueg@gentoo.org> -cantata-1.3.3.ebuild,
  -cantata-1.3.4.ebuild:
  Remove old.

*cantata-1.5.1 (03 Feb 2015)

  03 Feb 2015; Michał Górny <mgorny@gentoo.org> +cantata-1.5.1.ebuild:
  Version bump, bug #521370. Fix missing USE=dynamic deps,
  https://bugs.funtoo.org/browse/FL-2074.

  07 Dec 2014; Manuel Rüger <mrueg@gentoo.org> cantata-1.3.3.ebuild,
  cantata-1.3.4.ebuild:
  Update dep on oxygen-icons

  24 Jul 2014; Johannes Huber <johu@gentoo.org> cantata-1.3.3.ebuild,
  cantata-1.3.4.ebuild, metadata.xml:
  Rename local USE flag devices to global USE flag udisks, bug #517966.

  30 May 2014; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Remove qt from metadata.

*cantata-1.3.4 (09 Apr 2014)

  09 Apr 2014; Johannes Huber <johu@gentoo.org> +cantata-1.3.4.ebuild,
  -cantata-1.2.2.ebuild:
  Version bump by Nikoli <nikoli@gmx.us>, bug #507260. Remove old.

*cantata-1.3.3 (05 Apr 2014)

  05 Apr 2014; Johannes Huber <johu@gentoo.org> +cantata-1.3.3.ebuild,
  metadata.xml:
  Version bump by Nikoli <nikoli@gmx.us>, bug #506856.

  20 Jan 2014; Sergey Popov <pinkbyte@gentoo.org> -cantata-1.1.2.ebuild,
  -files/cantata-1.1.2-no-taglib.patch, -cantata-1.1.3.ebuild, metadata.xml:
  Security cleanup, wrt bug #495182

*cantata-1.2.2 (08 Jan 2014)

  08 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +cantata-1.2.2.ebuild,
  -files/cantata-1.0.3-audiocd-automagic.patch,
  -files/cantata-1.0.3-system-qjson.patch:
  Version bump. Thanks to Nikoli. Fixes bug #497152. Remove unused patches, too.
