@@ -2,24 +2,24 @@
 Hash: SHA256
 
 DIST cantata-1.5.1.tar.bz2 1986772 SHA256 57173bdd0033a2c0c2829a6e05f7579b0f13ae7794d843167c013e1c971dfe78 SHA512 bd41bbe3a9c2fa6a4e653deb62a82b928febe3876a6023d4c9bff4fb71133aca5a8e34ae77b440d10ae42c0d024ebd1c460b367a75cefa29858275d707cf4e38 WHIRLPOOL 55054c1e8d95f1dc9322b7224dfa04fd8e8430b89c5a21883fdecf0829eca60720186e6b549d80216c4035429208e2191d2e5ae31608ede3a6afc8e5046e173f
-EBUILD cantata-1.5.1.ebuild 3042 SHA256 7d86395ab339897506df554e2832f688305c748bdfffe04f4bec1e3e7ae1552e SHA512 e0b6fac62c3960bfc66d20096f37391494c49d6416504276fd8dee8c96d66b7546998d4f52244585b114021e14d31e5e6f8e192eaec09ba5101fab3c5bb2eaaf WHIRLPOOL 622ba0ffecdd926b106758fe545fa355d5831a81213f176fe6ef61d9607211729db94c3a47839174713bc6c1929ad3f69eda457059e1a963c9b5912d80a4cf6b
-MISC ChangeLog 5392 SHA256 d04f82fb61665e4beb453d1f91870362f73f973d2919caa534aa41166871de0f SHA512 836f3a617f91892d38157ad106ee66d454d52df0fa626b5c0a43dade3e2520e8d8fcd218a5e6602ebaa13fb11680d5b473e2f3156df983ea6b6e3190400c20d8 WHIRLPOOL d2f809ef8a5cd4efa62aa3229ed2e7535877c6357fb1b69ab3c7c729c600a46ce552e0497a4f7b29fa34d2550703cac56b55c42cdc89ea047652f3da101d3c58
+EBUILD cantata-1.5.1.ebuild 3076 SHA256 fc0dc20456ab15901d8eea4b648dba96ad48f517c1cdad1fcc47a10064bd3ce3 SHA512 015f979333938da286b2c8ebbf9d7f56570a43c967846feab2dfa7283b96fb6b4a0a7f406f885a9650d807d3daa654a3d2bf90b0bb53c6d586ac3d40163d381f WHIRLPOOL 7c9a41a35bb44a9719a3979638e092a3df6664eb7a077be14d11333a2aef42d1f9e6248a4af5aa585faef50b510420d8fd5ca249342ace219b30696a61221e47
+MISC ChangeLog 5497 SHA256 9ebde97b0b56ec60a5f1c83fbebd8e180d5421fd389249afafcec7ad4bf674ee SHA512 2bd57729bbc7f86b5149e9c61b7da340a9b4435b68b05e0e31f1ecd983738180ffc4c91027137f89c54018186ee4e1d33f77ea5a97405dae44bdc1a463157193 WHIRLPOOL 9b6be1f1d1e14ecb5bd1a5377d0145e3a42174ec06ea882f775d9fecbb1d4e622c70a732c65c12b88ae1da80d0a20434e5f7656056cce3f13f75f0fa5ce76ad6
 MISC metadata.xml 647 SHA256 c2a0e4d1db640c37173b448d2141c70f7a7ab91d11f3ce2cf915c7e947c0ed24 SHA512 c7184d26e4c0a260c8baa3e4552bafdac72cf0cde99e5797dbe4e325b56a6c72acc1098ae8b8eb29723e5478cd6a9ecda05026ec19a17ef719ed6b171c019e76 WHIRLPOOL b4f65ad0cb4ee54beaf2d6016d4cf8e09c67d6de986b598f89e631f6cd836a6498ed72b837bb64e60abf15f7194505476ed36adcc690977c824468bc00ad0550
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJiBAEBCABMBQJVcKExRRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+iQJiBAEBCABMBQJVxOvORRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
 MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
-7ALmD/4uvG550wgIk2wlrDFNM1ZMWqqxCkt8leNwyk7yllCG8C7V9vUK7vauZuyN
-Y5Z5IiDbDR6GZVSzVs1I9NPhezWohDp6rnoff6xurDlq6EPlROQkBCx7WsA7VXkq
-hrhDgTQ1c4scB0Cp8PT6NCefI+X/vNfCOiShgXMDrJwllZtuzrndXZafmnHC8F4y
-G+5aStbxG111dxfgvQfUCaXwPHZnY01Lz4wwOVSccGkF2caUJ8x4l+SDs9/2cedD
-Bno0fWPO598Rjht4WxcDnTPVZyrTOBRabUGMmEWuUXVC3rdiAPkvDpMeA4zt64+3
-eHrKLsoUrUmd15VRP2CTGd6XykfoeT5zyXEkLZIrn5dziTmFwLJUYBvfoIqwqfCe
-6dflHsay0hHrh7CqIgfXItfH3kT5E16do/dVLjvtBjjiAxovErSPbq0dR7ci8IC8
-yFzTb2mRTG7+rEaZyRDuqkHhb5DoDalG95n4rQvTmagKvQoE9BxSKiFkiOXBMoMZ
-m3adDRTlbtokSvsc1YAY/kUiJ05fCu16DMiiNrTZ85OXjUU64ePKbJPhi/yChzw1
-N1pU55pMkU1lK4XvSV4jOs2yTJutO2bGztq3bYQH1v3MWgnIDeWJxxpCHq69xfDS
-6MQgVbrKtPvpKry8131SpoGZkdEVu4/6hU57W912NyGW8/iWkw==
-=Akue
+7ER/D/0frcR97NNTxJ5sryADjIH/X/abeDKfWtN7KGxylXHgoV0RJbSK7VmYeR41
+nzTPqJoL9AAX3dGyn8fO0/TImxTGcMMG1Heahn9QJ5d4FyDLW8BBBYyrOr4lkv2i
+TqmOKitDJ1Kf9VIhE4hP/Y3zKEOE/RwMX2v786prdShNEwI7qAjaIZjiITWUFw/m
+rZbhg9i8rR5M3eTj4Sz4RQ0tonN5lbltgmubJLtiHlpqZ3yWoKV2XJJkp8jfThQE
+1UZK5vTqd3bvCkzRl/N0wxqc8mF9CuJFT8Z5g5OXPIIFbkIHVIkofho0AKrNsF6S
+22MIFh0GVi8NwqF88Uipz36aZ6iACqpwiuIWArscRERbEo2fSoERcRqHV+V6ORwj
+UxtQNrWxy10FNLlAlXE390VqFAyKED1ydXSoqXUG5VTYUjB5B/oG/VGC1k6Erf/7
+3HmWxOyenkqywBMwEHSLuOvorTtSGaRUUc1xhMqAUm2D+hlNlPzSFqYtU+2na6ym
+6G4/pYgO7hNgfRbEqt1JAb0ZYMyDo/O3eo5Pr7Q3pbXGZtzPXZntlm6Xm6jnfn4t
+D0ugmZEqfMbwXWSz1KcpjItK0Jb83oJj21Qys2u8x+ax2A0OWfLHLB+i2f+2Ckmk
+2NaZb1yNyKh30GBLXfnD+bjJI+pILgQ99Yl1vj/admppu7JASg==
+=EnpY
 -----END PGP SIGNATURE-----
