@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/cantata-1.5.1.ebuild,v 1.3 2015/06/04 19:04:14 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cantata/cantata-1.5.1.ebuild,v 1.4 2015/08/07 17:32:57 kensington Exp $
 
 EAPI=5
 
@@ -66,6 +66,7 @@ RDEPEND="
 "
 DEPEND="${RDEPEND}
 	sys-devel/gettext
+	qt5? ( dev-qt/linguist-tools:5 )
 "
 RDEPEND="${RDEPEND}
 	dynamic? (
