@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
-DEPEND=sys-libs/zlib x11-libs/libX11 kde-apps/oxygen-icons cdda? ( media-sound/cdparanoia ) cddb? ( media-libs/libcddb ) kde? ( >=kde-apps/kwalletd-4.4:4[aqua=] ) lame? ( media-sound/lame ) mtp? ( media-libs/libmtp ) musicbrainz? ( media-libs/musicbrainz:5 ) qt5? ( dev-qt/qtconcurrent:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtsvg:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 ) !qt5? ( dev-libs/qjson dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 ) replaygain? ( media-sound/mpg123 virtual/ffmpeg ) taglib? ( media-libs/taglib[asf,mp4] media-libs/taglib-extras !kde? ( udisks? ( sys-fs/udisks:2 ) ) ) sys-devel/gettext >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) kde? ( dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) ) kde? ( dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4 >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=] )
+DEPEND=sys-libs/zlib x11-libs/libX11 kde-apps/oxygen-icons cdda? ( media-sound/cdparanoia ) cddb? ( media-libs/libcddb ) kde? ( >=kde-apps/kwalletd-4.4:4[aqua=] ) lame? ( media-sound/lame ) mtp? ( media-libs/libmtp ) musicbrainz? ( media-libs/musicbrainz:5 ) qt5? ( dev-qt/qtconcurrent:5 dev-qt/qtcore:5 dev-qt/qtdbus:5 dev-qt/qtgui:5 dev-qt/qtnetwork:5 dev-qt/qtsvg:5 dev-qt/qtwidgets:5 dev-qt/qtxml:5 ) !qt5? ( dev-libs/qjson dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 ) replaygain? ( media-sound/mpg123 virtual/ffmpeg ) taglib? ( media-libs/taglib[asf,mp4] media-libs/taglib-extras !kde? ( udisks? ( sys-fs/udisks:2 ) ) ) sys-devel/gettext qt5? ( dev-qt/linguist-tools:5 ) >=sys-apps/sed-4 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) kde? ( dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) ) kde? ( dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4 >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.4:4[aqua=] )
 DESCRIPTION=Featureful and configurable Qt client for the music player daemon (MPD)
 EAPI=5
 HOMEPAGE=https://code.google.com/p/cantata/
@@ -12,4 +12,4 @@ RESTRICT=test
 SLOT=4
 SRC_URI=https://drive.google.com/uc?export=download&id=0Bzghs6gQWi60UktwaTRMTjRIUW8 -> cantata-1.5.1.tar.bz2
 _eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	c9602887773166fe300444712fc7ff98	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	dcf3af2bbff0f16a6f0325a90246df80	kde4-functions	99e770658f27aaf2c8a5850af7598b18	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=666c4311514b0efdf85c64e0f0136edc
+_md5_=16304bfb0a9cec8baae55054531e06e9
