@@ -1,0 +1,9 @@
+DEFINED_PHASES=prepare
+DESCRIPTION=A standalone implementation of fortify source.
+EAPI=5
+HOMEPAGE=http://git.2f30.org/fortify-headers/
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~x86
+LICENSE=ISC
+SLOT=0
+SRC_URI=http://git.2f30.org/fortify-headers/snapshot/fortify-headers-0.6.tar.gz
+_md5_=bdb581d3b3f0f4be24925ec9d0669a43
