@@ -3,25 +3,27 @@ Hash: SHA256
 
 DIST fortify-headers-0.4.tar.gz 5610 SHA256 fedfbd951bf4d4bd30d32bef20710d6124c004037df52059a274c090c1f11a0a SHA512 669bf35df5278d4557caa2c8f28e33fe3e4a03c4267eed2cc8638dcb8e705d8797e487fbb524d9ff919e2752f1dc817cef9d41f14ceb46d520661e3d2301c5f2 WHIRLPOOL 2c3907913455417af3503d4b5cbea9afb8d374d954199cb58d4911c0af18c8078f45fd3d82b4184063127572fab023c4317734c484ccff75da5703d535d6a104
 DIST fortify-headers-0.5.tar.gz 5365 SHA256 4564f0ee9cb7c789b5a827d21a0d3b6da9df61fcb7ba31b711999f638e9e913a SHA512 951e3a5771c3cf9b2fe248e62badfc6699f0a05b8967f3982d279de8473501c66a6d1c17d7b42c90ef8bd303c06a642d7bdfea334caef892c90a15c45d4bb1c4 WHIRLPOOL 7e39879569746523688d0c6ea44bcf105a6e589c128341bcb7d8dc68c34cbfc344cd0f204b751364112a1e2340c26355931bef3538369bcfedf4b25e2050d04c
+DIST fortify-headers-0.6.tar.gz 5339 SHA256 e3baedbd1a2ca612faf83f3c87c50eeb33b31c663948cfb3ca04300751d86b68 SHA512 6106219332515e7c23354d916383cdac6efccba7eefa13b0c2c221d0fd03be7afb29b3a8622bd29b62ee0b602f9d1f273e1a08c07583bdcd12db9938ef4d7acc WHIRLPOOL 833aa8df26e1e28ec064ba0592dab42ee63e8fe794d095085ed544c7232855646790257c9b1c4d3a4af34873de9b1fcce222c3f665da3221c36ca5130cc88bc7
 EBUILD fortify-headers-0.4.ebuild 642 SHA256 9832c8e296f853940835b221af698b1c40b67e9907fecd7e79431537d46959f0 SHA512 076f0a0bc3a935709362cad5f86b62c621907a3cd80983004824f87927ecd4e4475c317a94565ef31b06276d11900ea1eef86e1c71aafee25e5a4a17bd966b13 WHIRLPOOL 056ebadadb231e8d724d1bb1fb5188782c948d0759b88c1a607952f2700c89d524fd553e804b5cbe99b27867560ba0baaf6e8768030970a9f462ab0d1473728a
 EBUILD fortify-headers-0.5.ebuild 752 SHA256 dead954d803458ff3b9c18779a4e4f1e5162f97aa4b38b67a59d58a98493224d SHA512 46ee137483950179c4ef72529db98fc92928623d3fb711f2b5d883928b4183195cb04060b3df34522a6371e61a3ddb013a84be42ad05b4bb1ebad553c8af0e7c WHIRLPOOL df415b4c86b9fec260c297bfd5ac1dbe4153c69b1d0383856c90e67476c9b9efa57d628365799659ddf0be3a3c6395554977213592369ca8012b9fbddae63710
+EBUILD fortify-headers-0.6.ebuild 752 SHA256 5c6340a2f578ee4d6fa6c1c2013f60868bf9b466221b62b7f3eb5ff966247e96 SHA512 eeab420f740997cf7058a0258a0cfb0e8642970ba9bc6ebf81c1c7f20d5f664b1f78758230edaf99292fd138ac291ce49e38e34b393271712a303b4366aa958f WHIRLPOOL 24f82830f32523eda595c54ab3e5cd4f0d36c37d838aa20e089da5dad1cf1d00653cfb9d28ec5fa81b5ea10e4d40aea0c1e8b40bcebc969559c3e251febc373f
 EBUILD fortify-headers-9999.ebuild 753 SHA256 654b77f96ab4159079834c77db8cd1c0e9a28d16d2629620ca279aa2f9b16c83 SHA512 f510d38154edb225325fd1bafd38470f5b482b502b2f2cf990aac48cc79d38ae8114c23f64d736cc141a0f2200741528d19c980cbe3261e144fcd2e6ce5bc8ef WHIRLPOOL 1ea066037385f4ac9a70cd614595cc7c820c0d8d165fcca5eb462e12173f328fbda37744ce3e709155dfbdb5ad4262c2da81d911c948d21540f254d9f1d2b5e8
-MISC ChangeLog 596 SHA256 022759f5dae1f5725b37c580ff76410c04f585a0424b963d506110e8aa881424 SHA512 fdb04cf11d07d9bd32b2be70a97f76b2f69c6bea7957ff4bde0894ae436e2db557433b031777011ef8ee5b6f88c87fba8f4870c6bbfc28acf29961d0e169173b WHIRLPOOL 8535b76063191d2fb6465e462288052f269a502791b767bee50994d8a80a5b705ee8e19e98a73b943e7fb13d8a717f1b09093ac744f6bee71a12f6250fc849cc
+MISC ChangeLog 735 SHA256 6b54c55a06665d7f20b44f565e25f4684cf18c1dacc05463415bf234d171afae SHA512 2e1042dc413cf3620ed045411a825cd4c567eaf277549fb7ba8bfcf30247c9bb40e582058029f9eded59fdf4e657993ff1b39c28b78c8494341dac9d55b73e12 WHIRLPOOL 41ae6460e68201b7449294b8535936cb525736dcab9bb03cfd7dda4319d45f2690f6650d56daf60aa667b7b7015a287e21cd28cd2d3a0721f3d9a79ae57d8313
 MISC metadata.xml 238 SHA256 f13e6e7b65d20beb9ae945d520160ef0dba80c1965754958945904d7e3c0a75f SHA512 3c3d75f1cb90ffcfb98df47481fbde6d451254a29fa87577acd25bc27cbcc3e5dbc0c1efce5974be905428f0b7caf912c8b051417aff92763847fa377493a153 WHIRLPOOL 6ec3d597b87aff99014404b8b732e6f600aafc3c3eeebfab135c9c19cde2e43161cfa23f841bd72826cc3393b724e1dac115c15dcce2b74ace6f1d6ec209dbf3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVlo1XAAoJEJOE+m71LUu6YvUP/2QtgyXmU0Wp/PGTjh3xF3cy
-L99ac7A7rw0AHJz1etEgF9Zql0IDy2O0bI+90PHMXhKeU0DVHBVizQyvows8doeU
-6RiPpS9swY5dyHzGO7ZQ0HM3HYP7FhfqkyN28RtMJFTN18i+e6LtQ94Q4N9uw5/G
-VP4uN6BBXMU2dC/XoMgP1L5Nnh/NJM3iZXIQlQO+fOrR8iTK3GFCAw8iyTkb2DAH
-iJbcuzhJuqlMA+UEAY/ifAW9KtII9cHgsif9iJGl8bNrQZ59HGKhHHfwA5ac81yx
-9auv83qAiwIq3B7x7g3gxA8b01cF1nbui8D8q1BYIsvaSUeAoCJoH1G+DRxzwY9l
-Rn8fGaQeKxnCg5diACdiYtbEyht/DCpRfxbLAr2VurGmZQ7zG0vp4EATQHVAUUM9
-pAOh//Ec1aksW8kdW8bylOtJNAx7Q4KbQ7EH5KIDDVZVEjP1dqX21Miiyprucipo
-Roj9I7nP/THI3p3vSw1BBrswXHssjO9vlBnLgmQ6kW3ciArjSTEt2xrLLhlY83M6
-feDqIduhbx/q00cmFy8n8ErvTbNN+9GDTYa4cfcLs4C+n5vVibGbF3Y9rIbZTVQu
-ItxgLFsoKAfgeLvJ+8O5NaPtfXDQcmTO2flDDBJj3M4Jc3rVn8hejp7LVi/Zcix5
-3ituQ+rAdtlqXbb+zKbq
-=JB05
+iQIcBAEBCAAGBQJVxO/ZAAoJEJOE+m71LUu6SWoQALR7fyr6zrUUnqfwBpMEJvMl
+gXEpmm17jyfmeJCVM8lYbcKrA+yLt2dCnpQWBQVYRCmxXp7maFCCdceCXXzQW46e
+zq2ELP4EKTC+iiUcTYopHJLl3d1MnLvjzF/UUnFKEJ4w4lReC4qPjQWMySybkAIv
+kY2oBCxzv4IDTDhUElSHiNxawFuMRg/ZJK/0Bg8oJE9mODrpdvhRrHW3cfY+3XoS
+faspHRA6v/Wrww80sRMyGy8HzBAkP31UNAdfJuN970TZ+dSt3VNsOJutVk7/hsvl
+9FfljDZV2R8IXd7NW1EBO1Q43uQ5sWdcFf7/O6ycfFzeqkAXQPVj8lea/DyrATb3
+YyYADRURF4csl2tPlaL488U2+B2rpQnmcQldex99lE8bhFjG2tP0Ldw3DbDa5rC9
+j3lBRHc0oMifaO/SnHaOVAXpPhzGrq8nRG+d25bmxKIDj8V0J4/DAQWIWGpkBVDJ
+eVU85rBvn+/h5FZBV32z2ClRL7szrYsATi1wH7PSWmyH59WcxIvgC/738iYvdip8
+U0kEwKaHZGRYGeVJDnTfZ7VKZvG0Y4DeAaub8WyX+Ps3fTaKBgH4ay6VllPeTLOr
+51BflqNIzLgw1aOBBZja2T0IGweZO4gXBM2d6a6INoKgl1q7/Yec2o7iMnJCtuD5
+2Xs/P4wSgxHM4CcRkUSq
+=h4Md
 -----END PGP SIGNATURE-----
