@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/fortify-headers
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/fortify-headers/ChangeLog,v 1.2 2015/07/03 13:23:08 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/fortify-headers/ChangeLog,v 1.3 2015/08/07 17:46:36 blueness Exp $
+
+*fortify-headers-0.6 (07 Aug 2015)
+
+  07 Aug 2015; Anthony G. Basile <blueness@gentoo.org>
+  +fortify-headers-0.6.ebuild:
+  Version bump.
 
 *fortify-headers-0.5 (03 Jul 2015)
 *fortify-headers-9999 (03 Jul 2015)
